--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-api",
+  "name": "auth-mailer",
   "version": "1.0.0",
   "main": "index.ts",
   "author": "Aethan Matthew Ilagan",
@@ -8,15 +8,12 @@
     "start:dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
-    "@types/mongoose": "^5.7.14",
-    "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.11"
+    "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
     "prettier": "^2.0.5",
     "ts-node": "^8.9.1",
     "tslint": "^6.1.2",
