Fix environment variables

--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start:dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/node": "^13.13.4",
     "prettier": "^2.0.5",
     "ts-node": "^8.9.1",
     "tslint": "^6.1.2",
